kcm_regionandlang: support glibc style 'utf8' variant

BUG: 477283